見出し(h1要素)のスタイル #1

--- a/app/views/layouts/staff.html.erb
+++ b/app/views/layouts/staff.html.erb
@@ -10,7 +10,7 @@
   <body>
     <div class="wrapper">
       <%= render 'shared/header' %>
-      <div id="container">
+      <div class="container">
         <%= yield %>
       </div>
       <%= render 'shared/footer' %>
