コンポーネントを意識してマークアップしよう

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -1,5 +1,5 @@
 @import "./base/variables";
 @import "./base/reset";
 @import "./components/common/header";
-@import "pages/staff/container";
-@import "pages/staff/layout";
+//@import "pages/staff/container";
+//@import "pages/staff/layout";
