--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,3 +1,14 @@
-<header>
-  <span class="logo-mark">BAUKIS KAI</span>
+<header class="Header">
+  <div class="Header__head">
+    <span class="logo-mark">BAUKIS KAI</span>
+    <nav class="Header__body">
+      <ul class="Menu">
+        <li class="Menu__item"><a href="#">Services</a></li>
+        <li class="Menu__item"><a href="#">Work</a></li>
+        <li class="Menu__item"><a href="#">About</a></li>
+        <li class="Menu__item"><a href="#">Blog</a></li>
+        <li class="Menu__item"><a href="#">Contact</a></li>
+      </ul>
+    </nav>
+  </div>
 </header>
