--- a/app/views/layouts/staff.html.erb
+++ b/app/views/layouts/staff.html.erb
@@ -8,11 +8,9 @@
   </head>
 
   <body>
-    <div class="wrapper">
+    <div id="wrapper">
       <%= render 'shared/header' %>
-      <div class="container">
-        <%= yield %>
-      </div>
+      <%= yield %>
       <%= render 'shared/footer' %>
     </div>
   </body>
