HTMLをマークアップ

--- a/app/views/staff/top/index.html.erb
+++ b/app/views/staff/top/index.html.erb
@@ -1,2 +1,29 @@
 <% @title = '職員トップページ' %>
 <h1><%= @title %></h1>
+<section>
+  <div class="EntryPanel">
+    <div class="EntryPanel__sub">
+      <%= image_tag('top/entry1.jpg',class: 'EntryPanel__thumb' , width: '275' , height: '250') %>
+    </div>
+    <div id="EntryPanel__main">
+      <h3 class="EntryPanel__head">冬のコーヒーギフト</h3>
+      <div class="EntryPanel__body">
+        大切なあの方にありがとうを届けたい。心も体も温まる素敵なギフト。プレゼントキャンペーン実施中！
+      </div>
+      <div class="EntryPanel__foot"><a href="#"></a>READ MORE</div>
+    </div>
+  </div>
+
+  <div class="EntryPanel">
+    <div class="EntryPanel__sub">
+      <%= image_tag('top/entry2.jpg',class: 'EntryPanel__thumb' , width: '275' , height: '250') %>
+    </div>
+    <div id="EntryPanel__main">
+      <h3 class="EntryPanel__head">あの人気店コラボメニュー</h3>
+      <div class="EntryPanel__body">
+        今話題の人気店、Macaron'n Thingsのパンケーキを使ったコラボ商品のセットメニューを販売中。
+      </div>
+      <div class="EntryPanel__foot"><a href="#"></a>READ MORE</div>
+    </div>
+  </div>
+</section>
