Flexを利用したヘッダーのCSS

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -1,5 +1,9 @@
 @import "./base/variables";
 @import "./base/reset";
 @import "./components/common/header";
+
+// メニュー
+@import "./components/common/menu";
+
 //@import "pages/staff/container";
 //@import "pages/staff/layout";
