--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,6 +1,6 @@
 <header class="Header">
   <div class="Header__head">
-    <span class="logo-mark">BAUKIS KAI</span>
+    <h1 class="loglo">BAUKIS KAI</h1>
     <nav class="Header__body">
       <ul class="Menu">
         <li class="Menu__item"><a href="#">Services</a></li>
