「画像+記事」のコンポーネントを作る

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -4,6 +4,8 @@
 
 // メニュー
 @import "./components/common/menu";
+// ブログ抜粋
+@import "./components/entryPanel";
 
 //@import "pages/staff/container";
 //@import "pages/staff/layout";
