--- a/app/assets/stylesheets/base/lib/_sanitize.scss
+++ b/app/assets/stylesheets/base/lib/_sanitize.scss
@@ -1,266 +1,150 @@
-/*! sanitize.css v4.0.0 | CC0 License | github.com/10up/sanitize.css */
+@charset 'utf-8';
 
-/* Display definitions
-   ========================================================================== */
+/*! sanitize.css v3.2.0 | CC0 1.0 Public Domain | github.com/10up/sanitize.css */
 
-/**
- * Add the correct display in IE 9-.
- * 1. Add the correct display in Edge, IE, and Firefox.
- * 2. Add the correct display in IE.
- */
-
-article,
-aside,
-details, /* 1 */
-figcaption,
-figure,
-footer,
-header,
-main, /* 2 */
-menu,
-nav,
-section,
-summary { /* 1 */
-	display: block;
-}
-
-/**
- * Add the correct display in IE 9-.
- */
-
-audio,
-canvas,
-progress,
-video {
-	display: inline-block;
-}
-
-/**
- * Add the correct display in iOS 4-7.
+/*
+ * Normalization
  */
 
 audio:not([controls]) {
-	display: none;
-	height: 0;
+  display: none; /* Chrome 44-, iOS 8+, Safari 9+ */
 }
 
-/**
- * Add the correct display in IE 10-.
- * 1. Add the correct display in IE.
- */
+button {
+  -webkit-appearance: button; /* iOS 8+ */
+  overflow: visible; /* Internet Explorer 11- */
+}
 
-template, /* 1 */
+details {
+  display: block; /* Edge 12+, Firefox 40+, Internet Explorer 11-, Windows Phone 8.1+ */
+}
+
+html {
+  -ms-overflow-style: -ms-autohiding-scrollbar; /* Edge 12+, Internet Explorer 11- */
+  overflow-y: scroll; /* All browsers without overlaying scrollbars */
+  -webkit-text-size-adjust: 100%; /* iOS 8+ */
+}
+
+input {
+  -webkit-border-radius: 0 /* iOS 8+ */
+}
+
+input[type="button"],
+input[type="reset"],
+input[type="submit"] {
+  -webkit-appearance: button;/* iOS 8+ */
+}
+
+input[type="number"] {
+  width: auto;/* Firefox 36+ */
+}
+
+input[type="search"] {
+  -webkit-appearance: textfield;/* Chrome 45+, Safari 9+ */
+}
+
+input[type="search"]::-webkit-search-cancel-button,
+input[type="search"]::-webkit-search-decoration {
+  -webkit-appearance: none;/* Chrome 45+, Safari 9+ */
+}
+
+main {
+  display: block; /* Android 4.3-, Internet Explorer 11-, Windows Phone 8.1+ */
+}
+
+pre {
+  overflow: auto; /* Internet Explorer 11- */
+}
+
+progress {
+  display: inline-block; /* Internet Explorer 11-, Windows Phone 8.1+ */
+}
+
+small {
+  font-size: 75%; /* All browsers */
+}
+
+summary {
+  display: block; /* Firefox 40+, Internet Explorer 11-, Windows Phone 8.1+ */
+}
+
+svg:not(:root) {
+  overflow: hidden; /* Internet Explorer 11- */
+}
+
+template {
+  display: none; /* Android 4.3-, Internet Explorer 11-, iOS 7-, Safari 7-, Windows Phone 8.1+ */
+}
+
+textarea {
+  overflow: auto; /* Edge 12+, Internet Explorer 11- */
+}
+
 [hidden] {
-	display: none;
+  display: none; /* Internet Explorer 10- */
 }
 
-/* Elements of HTML (https://www.w3.org/TR/html5/semantics.html)
-   ========================================================================== */
-
-/**
- * 1. Remove repeating backgrounds in all browsers (opinionated).
- * 2. Add box sizing inheritence in all browsers (opinionated).
+/*
+ * Universal inheritance
  */
 
 *,
-::before,
-::after {
-	background-repeat: no-repeat; /* 1 */
-	box-sizing: inherit; /* 2 */
+:before,
+:after {
+  box-sizing: inherit;
 }
 
-/**
- * 1. Add text decoration inheritance in all browsers (opinionated).
- * 2. Add vertical alignment inheritence in all browsers (opinionated).
- */
-
-::before,
-::after {
-	text-decoration: inherit; /* 1 */
-	vertical-align: inherit; /* 2 */
+* {
+  font-size: inherit;
+  line-height: inherit;
 }
 
-/**
- * 1. Add border box sizing in all browsers (opinionated).
- * 2. Add the default cursor in all browsers (opinionated).
- * 3. Add a flattened line height in all browsers (opinionated).
- * 4. Prevent font size adjustments after orientation changes in IE and iOS.
- */
-
-html {
-	box-sizing: border-box; /* 1 */
-	cursor: default; /* 2 */
-	font-family: sans-serif; /* 3 */
-	line-height: 1.5; /* 3 */
-	-ms-text-size-adjust: 100%; /* 4 */
-	-webkit-text-size-adjust: 100%; /* 5 */
+:before,
+:after {
+  text-decoration: inherit;
+  vertical-align: inherit;
 }
 
-/* Sections (https://www.w3.org/TR/html5/sections.html)
-   ========================================================================== */
 
-/**
- * Remove the margin in all browsers (opinionated).
- */
-
-body {
-	margin: 0;
-}
-
-/**
- * Correct the font sizes and margins on `h1` elements within
- * `section` and `article` contexts in Chrome, Firefox, and Safari.
- */
-
-h1 {
-	font-size: 2em;
-	margin: .67em 0;
-}
-
-/* Grouping content (https://www.w3.org/TR/html5/grouping-content.html)
-   ========================================================================== */
-
-/**
- * 1. Correct font sizing inheritance and scaling in all browsers.
- * 2. Correct the odd `em` font sizing in all browsers.
- */
-
-code,
-kbd,
-pre,
-samp {
-	font-family: monospace, monospace; /* 1 */
-	font-size: 1em; /* 2 */
-}
-
-/**
- * 1. Correct the height in Firefox.
- * 2. Add visible overflow in Edge and IE.
- */
-
-hr {
-	height: 0; /* 1 */
-	overflow: visible; /* 2 */
-}
-
-/**
- * Remove the list style on navigation lists in all browsers (opinionated).
- */
-
-nav ol,
-nav ul {
-	list-style: none;
-}
-
-/* Text-level semantics
-   ========================================================================== */
-
-/**
- * 1. Add a bordered underline effect in all browsers.
- * 2. Remove text decoration in Firefox 40+.
- */
-
-abbr[title] {
-	border-bottom: 1px dotted; /* 1 */
-	text-decoration: none; /* 2 */
-}
-
-/**
- * Prevent the duplicate application of `bolder` by the next rule in Safari 6.
- */
-
-b,
-strong {
-	font-weight: inherit;
-}
-
-/**
- * Add the correct font weight in Chrome, Edge, and Safari.
- */
-
-b,
-strong {
-	font-weight: bolder;
-}
-
-/**
- * Add the correct font style in Android 4.3-.
- */
-
-dfn {
-	font-style: italic;
-}
-
-/**
- * Add the correct colors in IE 9-.
- */
-
-mark {
-	background-color: #ffff00;
-	color: #000000;
-}
-
-/**
- * Add the correct vertical alignment in Chrome, Firefox, and Opera.
- */
-
-progress {
-	vertical-align: baseline;
-}
-
-/**
- * Correct the font size in all browsers.
- */
-
-small {
-	font-size: 83.3333%;
-}
-
-/**
- * Change the positioning on superscript and subscript elements
- * in all browsers (opinionated).
- * 1. Correct the font size in all browsers.
- */
-
-sub,
-sup {
-	font-size: 83.3333%; /* 1 */
-	line-height: 0;
-	position: relative;
-	vertical-align: baseline;
-}
-
-sub {
-	bottom: -.25em;
-}
-
-sup {
-	top: -.5em;
-}
 
 /*
- * Remove the text shadow on text selections (opinionated).
- * 1. Restore the coloring undone by defining the text shadow (opinionated).
+ * Opinionated defaults
  */
 
-::-moz-selection {
-	background-color: #b3d4fc; /* 1 */
-	color: #000000; /* 1 */
-	text-shadow: none;
+/* specify the border style and width of all elements */
+
+*,
+:before,
+:after {
+  border-style: solid;
+  border-width: 0;
 }
 
-::selection {
-	background-color: #b3d4fc; /* 1 */
-	color: #000000; /* 1 */
-	text-shadow: none;
+/* specify the core styles of all elements */
+
+* {
+  background-repeat: no-repeat;
+  margin: 0;
+  padding: 0;
 }
 
-/* Embedded content (https://www.w3.org/TR/html5/embedded-content-0.html)
-   ========================================================================== */
+/* specify the root styles of the document */
 
-/*
- * Change the alignment on media elements in all browers (opinionated).
- */
+:root {
+  background-color: #ffffff;
+  box-sizing: border-box;
+  color: #000000;
+  cursor: default;
+  font: 100%/1.5 sans-serif;
+}
+
+/* specify the text decoration of anchors */
+
+a {
+  text-decoration: none;
+}
+
+/* specify the alignment of media elements */
 
 audio,
 canvas,
@@ -268,259 +152,143 @@ iframe,
 img,
 svg,
 video {
-	vertical-align: middle;
+  vertical-align: middle;
 }
 
-/**
- * Remove the border on images inside links in IE 10-.
- */
-
-img {
-	border-style: none;
-}
-
-/**
- * Change the fill color to match the text color in all browsers (opinionated).
- */
-
-svg {
-	fill: currentColor;
-}
-
-/**
- * Hide the overflow in IE.
- */
-
-svg:not(:root) {
-	overflow: hidden;
-}
-
-/* Links (https://www.w3.org/TR/html5/links.html#links)
-   ========================================================================== */
-
-/**
- * 1. Remove the gray background on active links in IE 10.
- * 2. Remove the gaps in underlines in iOS 8+ and Safari 8+.
- */
-
-a {
-	background-color: transparent; /* 1 */
-	-webkit-text-decoration-skip: objects; /* 2 */
-}
-
-/**
- * Remove the outline when hovering in all browsers (opinionated.
- */
-
-:hover {
-	outline-width: 0;
-}
-
-/* Tabular data (https://www.w3.org/TR/html5/tabular-data.html)
-   ========================================================================== */
-
-/*
- * Remove border spacing in all browsers (opinionated).
- */
-
-table {
-	border-collapse: collapse;
-	border-spacing: 0;
-}
-
-/* transform-style:  (https://www.w3.org/TR/html5/forms.html)
-   ========================================================================== */
-
-/**
- * 1. Remove the default styling in all browsers (opinionated).
- * 3. Remove the margin in Firefox and Safari.
- */
+/* specify the background color of form elements */
 
 button,
 input,
 select,
 textarea {
-	background-color: transparent; /* 1 */
-	border-style: none; /* 1 */
-	color: inherit; /* 1 */
-	font-size: 1em; /* 1 */
-	margin: 0; /* 3 */
+  background-color: transparent;
 }
 
-/**
- * Correct the overflow in IE.
- * 1. Correct the overflow in Edge.
- */
+/* specify the inherited color and font of form elements */
 
 button,
-input { /* 1 */
-	overflow: visible;
+input,
+select,
+textarea {
+  color: inherit;
+  font-family: inherit;
+  font-style: inherit;
+  font-weight: inherit;
 }
 
-/**
- * Remove the inheritance in Edge, Firefox, and IE.
- * 1. Remove the inheritance in Firefox.
- */
+/* specify the minimum height of form elements */
 
 button,
-select { /* 1 */
-	text-transform: none;
-}
-
-/**
- * 1. Prevent the WebKit bug where (2) destroys native `audio` and `video`
- *    controls in Android 4.
- * 2. Correct the inability to style clickable types in iOS and Safari.
- */
-
-button,
-html [type="button"], /* 1 */
+[type="button"],
+[type="date"],
+[type="datetime"],
+[type="datetime-local"],
+[type="email"],
+[type="month"],
+[type="number"],
+[type="password"],
 [type="reset"],
-[type="submit"] {
-	-webkit-appearance: button; /* 2 */
+[type="search"],
+[type="submit"],
+[type="tel"],
+[type="text"],
+[type="time"],
+[type="url"],
+[type="week"],
+select,
+textarea {
+  min-height: 1.5em;
 }
 
-/**
- * Remove the inner border and padding in Firefox.
- */
+/* specify the font family of code elements */
 
-::-moz-focus-inner {
-	border-style: none;
-	padding: 0;
+code,
+kbd,
+pre,
+samp {
+  font-family: monospace, monospace;
 }
 
-/**
- * Correct the focus styles unset by the previous rule.
- */
+/* specify the list style of nav lists */
 
-:-moz-focusring {
-	outline: 1px dotted ButtonText;
+nav ol,
+nav ul {
+  list-style: none;
 }
 
-/**
- * Correct the border, margin, and padding in all browsers.
- */
+/* specify the standard appearance of selects */
 
-fieldset {
-	border: 1px solid #c0c0c0;
-	margin: 0 2px;
-	padding: .35em .625em .75em;
+select {
+  -moz-appearance: none;    /* Firefox 40+ */
+  -webkit-appearance: none /* Chrome 45+ */
 }
 
-/**
- * 1. Correct the text wrapping in Edge and IE.
- * 2. Remove the padding so developers are not caught out when they zero out
- *    `fieldset` elements in all browsers.
- */
-
-legend {
-	display: table; /* 1 */
-	max-width: 100%; /* 1 */
-	padding: 0; /* 2 */
-	white-space: normal; /* 1 */
+select::-ms-expand {
+  display: none;/* Edge 12+, Internet Explorer 11- */
 }
 
-/**
- * 1. Remove the vertical scrollbar in IE.
- * 2. Change the resize direction on textareas in all browsers (opinionated).
- */
+select::-ms-value {
+  color: currentColor;/* Edge 12+, Internet Explorer 11- */
+}
+
+/* specify the border styling of tables */
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
+/* specify the resizability of textareas */
 
 textarea {
-	overflow: auto; /* 1 */
-	resize: vertical; /* 2 */
+  resize: vertical;
 }
 
-/**
- * Remove the padding in IE 10-.
- */
+/* specify the background color, font color, and drop shadow of text selections */
 
-[type="checkbox"],
-[type="radio"] {
-	padding: 0;
+::-moz-selection {
+  background-color: #b3d4fc; /* required when declaring ::selection */
+  color: #ffffff;
+  text-shadow: none;
 }
 
-/**
- * Correct the cursor style on increment and decrement buttons in Chrome.
- */
-
-::-webkit-inner-spin-button,
-::-webkit-outer-spin-button {
-	height: auto;
+::selection {
+  background-color: #b3d4fc; /* required when declaring ::selection */
+  color: #ffffff;
+  text-shadow: none;
 }
 
-/**
- * 1. Correct the odd appearance in Chrome and Safari.
- * 2. Correct the outline style in Safari.
- */
-
-[type="search"] {
-	-webkit-appearance: textfield; /* 1 */
-	outline-offset: -2px; /* 2 */
-}
-
-/**
- * Remove the inner padding and cancel buttons in Chrome and Safari for OS X.
- */
-
-::-webkit-search-cancel-button,
-::-webkit-search-decoration {
-	-webkit-appearance: none;
-}
-
-/**
- * Correct the text style on placeholders in Chrome, Edge, and Safari.
- */
-
-::-webkit-input-placeholder {
-	color: inherit;
-	opacity: .54;
-}
-
-/**
- * 1. Correct the inability to style clickable types in iOS and Safari.
- * 2. Change font properties to `inherit` in Safari.
- */
-
-::-webkit-file-upload-button {
-	-webkit-appearance: button; /* 1 */
-	font: inherit; /* 2 */
-}
-
-/* WAI-ARIA (https://www.w3.org/TR/html5/dom.html#wai-aria)
-   ========================================================================== */
-
-/**
- * Change the cursor on busy elements (opinionated).
- */
+/* specify the progress cursor of updating elements */
 
 [aria-busy="true"] {
-	cursor: progress;
+  cursor: progress;
 }
 
-/*
- * Change the cursor on control elements (opinionated).
- */
+/* specify the pointer cursor of trigger elements */
 
 [aria-controls] {
-	cursor: pointer;
+  cursor: pointer;
 }
 
-/*
- * Change the cursor on disabled, not-editable, or otherwise
- * inoperable elements (opinionated).
- */
+/* specify the unstyled cursor of disabled, not-editable, or otherwise inoperable elements */
 
 [aria-disabled] {
-	cursor: default;
+  cursor: default;
 }
 
-/* User interaction (https://www.w3.org/TR/html5/editing.html)
-   ========================================================================== */
+/* specify the style of visually hidden yet accessible elements */
 
-/*
- * Remove the tapping delay on clickable elements (opinionated).
- * 1. Remove the tapping delay in IE 10.
- */
+[hidden][aria-hidden="false"] {
+  clip: rect(0 0 0 0);
+  display: inherit;
+  position: absolute
+}
+
+[hidden][aria-hidden="false"]:focus {
+  clip: auto;
+}
+
+/* remove delay from tapping on clickable elements */
 
 a,
 area,
@@ -530,20 +298,8 @@ label,
 select,
 textarea,
 [tabindex] {
-	-ms-touch-action: manipulation; /* 1 */
-	touch-action: manipulation;
+  -ms-touch-action: manipulation;
+  touch-action: manipulation;
 }
 
-/*
- * Change the display on visually hidden accessible elements (opinionated).
- */
-
-[hidden][aria-hidden="false"] {
-	clip: rect(0, 0, 0, 0);
-	display: inherit;
-	position: absolute;
-}
-
-[hidden][aria-hidden="false"]:focus {
-	clip: auto;
-}
+/*# sourceMappingURL=sanitize.css.map */
