--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -6,6 +6,8 @@
 @import "./components/common/menu";
 // ブログ抜粋
 @import "./components/entryPanel";
+// ボタン
+@import "./components/parts/buttons";
 
 //@import "pages/staff/container";
 //@import "pages/staff/layout";
