レイアウトを整えるCSSを作る

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -8,6 +8,8 @@
 @import "./components/entryPanel";
 // ボタン
 @import "./components/parts/buttons";
+// レイアウト
+@import "components/parts/layouts";
 
 //@import "pages/staff/container";
 //@import "pages/staff/layout";
