カルーセルを組み込むには

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -10,6 +10,8 @@
 @import "./components/parts/buttons";
 // レイアウト
 @import "components/parts/layouts";
+// カルーセル
+@import "components/imageSlide";
 
 //@import "pages/staff/container";
 //@import "pages/staff/layout";
