--- a/app/views/layouts/staff.html.erb
+++ b/app/views/layouts/staff.html.erb
@@ -13,5 +13,8 @@
       <%= yield %>
       <%= render 'shared/footer' %>
     </div>
+    <script>
+        imageSlide('Slide', 2);
+    </script>
   </body>
 </html>
