インジケータの制作

--- a/app/views/staff/top/index.html.erb
+++ b/app/views/staff/top/index.html.erb
@@ -20,6 +20,9 @@
     </li>
   </ul>
   <div class="ImageSlide__sub">
+    <span class="ImageSlide__dot">image1</span>
+    <span class="ImageSlide__dot isActive">image2</span>
+    <span class="ImageSlide__dot">image3</span>
   </div>
 </div>
 
