JavaScriptを有効化する

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -12,6 +12,7 @@
 @import "components/parts/layouts";
 // カルーセル
 @import "components/imageSlide";
+@import "./components/common/section";
 
 //@import "pages/staff/container";
 //@import "pages/staff/layout";
