--- a/app/views/staff/top/index.html.erb
+++ b/app/views/staff/top/index.html.erb
@@ -1,32 +1,32 @@
 <% @title = '職員トップページ' %>
 <h1><%= @title %></h1>
 
-<div class="ImageSlide">
+<div class="ImageSlide Section">
   <ul id="Slide" class="ImageSlide__main">
-    <li class="ImageSlide__item">
+    <li class="ImageSlide__item js-slide-item">
       <a href="#">
         <%= image_tag('top/slide1.jpg', class: 'ImageSlide__image', alt:'about our tea', width:'1180', height:'490') %>
       </a>
     </li>
-    <li class="ImageSlide__item">
+    <li class="ImageSlide__item js-slide-item">
       <a href="#">
         <%= image_tag('top/slide2.jpg', class: 'ImageSlide__image', alt:'about our tea', width:'1180', height:'490') %>
       </a>
     </li>
-    <li class="ImageSlide__item">
+    <li class="ImageSlide__item js-slide-item">
       <a href="#">
         <%= image_tag('top/slide3.jpg', class: 'ImageSlide__image', alt:'about our tea', width:'1180', height:'490') %>
       </a>
     </li>
   </ul>
   <div class="ImageSlide__sub">
-    <span class="ImageSlide__dot">image1</span>
-    <span class="ImageSlide__dot isActive">image2</span>
-    <span class="ImageSlide__dot">image3</span>
+    <span class="ImageSlide__dot js-slide-point">image1</span>
+    <span class="ImageSlide__dot js-slide-point">image2</span>
+    <span class="ImageSlide__dot js-slide-point">image3</span>
   </div>
 </div>
 
-<section class="l-column">
+<section class="Section l-column">
   <div class="l-row">
     <div class="EntryPanel l-halfColumn">
       <div class="EntryPanel__sub">
