タイトル部分を作成する

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -13,6 +13,8 @@
 // カルーセル
 @import "components/imageSlide";
 @import "./components/common/section";
+// ラベル
+@import "components/parts/labels";
 
 //@import "pages/staff/container";
 //@import "pages/staff/layout";
