OverlayPanelを作成する

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -15,6 +15,8 @@
 @import "./components/common/section";
 // ラベル
 @import "components/parts/labels";
+// オーバーレイパネル
+@import "components/overlayPanel";
 
 //@import "pages/staff/container";
 //@import "pages/staff/layout";
