--- a/app/views/staff/top/index.html.erb
+++ b/app/views/staff/top/index.html.erb
@@ -56,6 +56,25 @@
   </div>
 </section>
 
+
 <section class="Section">
   <h2 class="sectionLabel l-column">Content</h2>
+  <div class="l-row">
+    <div class="l-halfTile">
+      <a href="#" class="OverlayPanel">
+        <h3 class="OverlayPanel__head">Drink Menu</h3>
+        <p class="OverlayPanel__body">
+          定番メニューから、季節に合わせた商品まで品揃え豊富に取り揃えております。あなたのお気に入りを見つけましょう。
+        </p>
+      </a>
+    </div>
+    <div class="l-halfTile">
+      <a href="#" class="OverlayPanel">
+        <h3 class="OverlayPanel__head">Food Menu</h3>
+        <p class="OverlayPanel__body">
+          サンドイッチ、ケーキ、パスタ、当店自慢のコーヒーと一緒にどうぞ。
+        </p>
+      </a>
+    </div>
+  </div>
 </section>
