背景画像を設定する

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -17,6 +17,8 @@
 @import "components/parts/labels";
 // オーバーレイパネル
 @import "components/overlayPanel";
+// Indexページ
+@import "pages/index";
 
 //@import "pages/staff/container";
 //@import "pages/staff/layout";
