--- a/app/views/staff/top/index.html.erb
+++ b/app/views/staff/top/index.html.erb
@@ -60,7 +60,7 @@
 <section class="Section">
   <h2 class="sectionLabel l-column">Content</h2>
   <div class="l-row">
-    <div class="l-halfTile">
+    <div class="l-halfTile IndexPage__drinkMenu">
       <a href="#" class="OverlayPanel">
         <h3 class="OverlayPanel__head">Drink Menu</h3>
         <p class="OverlayPanel__body">
@@ -68,7 +68,7 @@
         </p>
       </a>
     </div>
-    <div class="l-halfTile">
+    <div class="l-halfTile IndexPage__foodMenu">
       <a href="#" class="OverlayPanel">
         <h3 class="OverlayPanel__head">Food Menu</h3>
         <p class="OverlayPanel__body">
