アイコン付きのコンテンツメニューを作成する

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -19,6 +19,8 @@
 @import "components/overlayPanel";
 // Indexページ
 @import "pages/index";
+// アイコンパネル
+@import "components/iconPanel";
 
 //@import "pages/staff/container";
 //@import "pages/staff/layout";
