--- a/app/views/staff/top/index.html.erb
+++ b/app/views/staff/top/index.html.erb
@@ -57,9 +57,10 @@
 </section>
 
 
+
 <section class="Section">
   <h2 class="sectionLabel l-column">Content</h2>
-  <div class="l-row">
+  <div class="Section__item l-row">
     <div class="l-halfTile IndexPage__drinkMenu">
       <a href="#" class="OverlayPanel">
         <h3 class="OverlayPanel__head">Drink Menu</h3>
@@ -73,6 +74,34 @@
         <h3 class="OverlayPanel__head">Food Menu</h3>
         <p class="OverlayPanel__body">
           サンドイッチ、ケーキ、パスタ、当店自慢のコーヒーと一緒にどうぞ。
+        </p>
+      </a>
+    </div>
+  </div>
+  <div class="Section__item l-column">
+    <div class="l-row">
+      <a class="IconPanel l-quaterColumn">
+        <h3 class="IconPanel__head">こだわりの空間</h3>
+        <p class="IconPanel__body">
+          ランチからディナーまでいつまでもリラックスして使えるくつろぎ空間。椅子や壁、細部にまでこだわっています。
+        </p>
+      </a>
+      <a class="IconPanel l-quaterColumn">
+        <h3 class="IconPanel__head">豆へのこだわり</h3>
+        <p class="IconPanel__body">
+          原産地、豆の種類、焙煎方法のこだわりを紹介する
+        </p>
+      </a>
+      <a class="IconPanel l-quaterColumn">
+        <h3 class="IconPanel__head">コーヒースクール</h3>
+        <p class="IconPanel__body">
+          コーヒー豆の基礎知識から、美味しいコーヒーを淹れるコツをお教えします。
+        </p>
+      </a>
+      <a class="IconPanel l-quaterColumn">
+        <h3 class="IconPanel__head">BLOG</h3>
+        <p class="IconPanel__body">
+          お店の最新情報を、いち早くお届け。
         </p>
       </a>
     </div>
