ニュースのコンポーネントを作成する

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -21,6 +21,8 @@
 @import "pages/index";
 // アイコンパネル
 @import "components/iconPanel";
+// おしらせ一覧
+@import "./components/newsList";
 
 //@import "pages/staff/container";
 //@import "pages/staff/layout";
