--- a/app/views/staff/top/index.html.erb
+++ b/app/views/staff/top/index.html.erb
@@ -1,31 +1,6 @@
 <% @title = '職員トップページ' %>
 <h1><%= @title %></h1>
 
-<div class="ImageSlide Section">
-  <ul id="Slide" class="ImageSlide__main">
-    <li class="ImageSlide__item js-slide-item">
-      <a href="#">
-        <%= image_tag('top/slide1.jpg', class: 'ImageSlide__image', alt:'about our tea', width:'1180', height:'490') %>
-      </a>
-    </li>
-    <li class="ImageSlide__item js-slide-item">
-      <a href="#">
-        <%= image_tag('top/slide2.jpg', class: 'ImageSlide__image', alt:'about our tea', width:'1180', height:'490') %>
-      </a>
-    </li>
-    <li class="ImageSlide__item js-slide-item">
-      <a href="#">
-        <%= image_tag('top/slide3.jpg', class: 'ImageSlide__image', alt:'about our tea', width:'1180', height:'490') %>
-      </a>
-    </li>
-  </ul>
-  <div class="ImageSlide__sub">
-    <span class="ImageSlide__dot js-slide-point">image1</span>
-    <span class="ImageSlide__dot js-slide-point">image2</span>
-    <span class="ImageSlide__dot js-slide-point">image3</span>
-  </div>
-</div>
-
 <section class="Section l-column">
   <div class="l-row">
     <div class="EntryPanel l-halfColumn">
@@ -55,8 +30,6 @@
     </div>
   </div>
 </section>
-
-
 
 <section class="Section">
   <h2 class="sectionLabel l-column">Content</h2>
@@ -106,4 +79,32 @@
       </a>
     </div>
   </div>
+
+  <section class="Section l-column">
+    <div class="Section__head">
+      <h2 class="sectionLabel">News</h2>
+    </div>
+    <ol class="NewsList">
+      <li class="NewsList__item">
+        <time class="NewsList__head" datatime="2016-10-12">2016.10.12</time>
+        <span class="NewsList__body">「かぼちゃタルト」「ヘーゼルナッツラテ」「ストロベリーブラウニー」「ハニーソイラテ」「たっぷりチーズときのこのパニーニ」新発売。</span>
+      </li>
+      <li class="NewsList__item">
+        <time class="NewsList__head" datatime="2016-09-01">2016.09.01</time>
+        <span class="NewsList__body">営業時間変更に関するお知らせ</span>
+      </li>
+      <li class="NewsList__item">
+        <time class="NewsList__head" datatime="2016-08-20">2016.08.20</time>
+        <span class="NewsList__body">鎌倉店ニューオープン</span>
+      </li>
+      <li class="NewsList__item">
+        <time class="NewsList__head" datatime="2016-08-10">2016.08.10</time>
+        <span class="NewsList__body">夏季限定。マンゴースムージー発売</span>
+      </li>
+      <li class="NewsList__item">
+        <time class="NewsList__head" datatime="2016-04-02">2016.04.02</time>
+        <span class="NewsList__body">[期間限定]さくら抹茶ラテ販売開始</span>
+      </li>
+    </ol>
+  </section>
 </section>
