フッター作成を始める

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -23,6 +23,8 @@
 @import "components/iconPanel";
 // おしらせ一覧
 @import "./components/newsList";
+// フッター
+@import "./components/common/footer";
 
 //@import "pages/staff/container";
 //@import "pages/staff/layout";
