--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,3 +1,28 @@
-<footer>
-  <p>Powered by BAUKIS KAI &copy; 2014 k2works</p>
+<footer class="Footer">
+  <div class="l-row l-column">
+    <div class="Footer__head">
+      <a href="./" class="logo">BAUKIS KAI</a>
+      <ul class="Menu">
+        <li><a href="#" class="Menu__item">Services</a></li>
+        <li><a href="#" class="Menu__item">Work</a></li>
+        <li><a href="#" class="Menu__item">About us</a></li>
+        <li><a href="#" class="Menu__item">Blog</a></li>
+        <li><a href="#" class="Menu__item">Contact</a></li>
+      </ul>
+    </div>
+    <div class="Footer__body">
+      <p>Powered by BAUKIS KAI &copy; 2014 k2works</p>
+      <p><a href="#">Legal Notice</a></p>
+      <p><a href="#">Privacy policy</a></p>
+    </div>
+    <ul class="Footer__foot">
+      <li><a href="#">Facebook</a></li>
+      <li><a href="#">Youtube</a></li>
+      <li><a href="#">Twitter</a></li>
+      <li><a href="#">LinkedIn</a></li>
+      <li><a href="#">Flickr</a></li>
+      <li><a href="#">Instagram</a></li>
+      <li><a href="#">Yelp</a></li>
+    </ul>
+  </div>
 </footer>
