Menuを修正する

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -2,7 +2,7 @@
   <div class="l-row l-column">
     <div class="Footer__head">
       <a href="./" class="logo">BAUKIS KAI</a>
-      <ul class="Menu">
+      <ul class="Menu Menu--sub">
         <li><a href="#" class="Menu__item">Services</a></li>
         <li><a href="#" class="Menu__item">Work</a></li>
         <li><a href="#" class="Menu__item">About us</a></li>
