アイコンフォントを使う

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -33,6 +33,9 @@
 // セクション分け
 @import "./components/common/section";
 
+// SNS
+@import "./components/common/sns";
+
 // Others
 //----------------------------
 // ブログ抜粋
@@ -50,6 +53,8 @@
 // おしらせ一覧
 @import "./components/newsList";
 
+//font-awesome
+@import "font-awesome";
 // ===========================
 // Pages
 // ===========================
