WebFontを使ってみよう

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,6 +1,6 @@
 <header class="Header">
   <div class="Header__head">
-    <h1 class="loglo">BAUKIS KAI</h1>
+    <h1 class="logo">BAUKIS KAI</h1>
   </div>
   <nav class="Header__body">
     <ul class="Menu">
