--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -1,7 +1,12 @@
 // ===========================
 // Base
 // ===========================
+@font-face {
+  font-family: 'Lato';
+  src: url('Lato/Lato-Regular.ttf') format('truetype');
+}
 @import "./base/variables";
+@import "./base/mixins";
 @import "./base/reset";
 
 // ===========================
