突発的な修正に上手に対応するには？

--- a/app/views/staff/top/index.html.erb
+++ b/app/views/staff/top/index.html.erb
@@ -138,3 +138,14 @@
     </ol>
   </section>
 </section>
+
+<div class="l-column">
+  <div class="l-row">
+    <a href="#" class="l-halfColumn">
+      <%= image_tag('top/top_banner_1.jpg', class:'l-fitImg', alt:'Dummy banner') %>
+    </a>
+    <a href="#" class="l-halfColumn">
+      <%= image_tag('top/top_banner_2.jpg', class:'l-fitImg', alt:'Dummy banner') %>
+    </a>
+  </div>
+</div>
