ユーティリティclassを作成する

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -60,10 +60,17 @@
 
 //font-awesome
 @import "font-awesome";
+
 // ===========================
 // Pages
 // ===========================
 @import "./pages/index";
+
+// ===========================
+// Utils
+// ===========================
+// サイズ、余白などの便利class
+@import "./utils/arrangements";
 
 //@import "pages/staff/container";
 //@import "pages/staff/layout";
