--- a/app/views/staff/top/index.html.erb
+++ b/app/views/staff/top/index.html.erb
@@ -139,7 +139,7 @@
   </section>
 </section>
 
-<div class="l-column">
+<div class="l-column u-mt60px u-mb100px">
   <div class="l-row">
     <a href="#" class="l-halfColumn">
       <%= image_tag('top/top_banner_1.jpg', class:'l-fitImg', alt:'Dummy banner') %>
