--- a/app/assets/stylesheets/base/_variables.scss
+++ b/app/assets/stylesheets/base/_variables.scss
@@ -12,3 +12,6 @@ $color-black: #252525;
 $color-main-text: #474747;
 $color-white: #fff;
 $font-sub: 'Lato';
+//break points
+$sp-max-width: 640px;
+$pc-min-width: 641px;
