--- a/app/views/staff/top/index.html.erb
+++ b/app/views/staff/top/index.html.erb
@@ -80,28 +80,28 @@
   <div class="Section__item l-column">
     <div class="l-row">
       <a class="IconPanel l-quaterColumn">
-        <%= fa_icon 'tree' %>
+        <%= fa_icon 'tree', class:'IconPanel__icon' %>
         <h3 class="IconPanel__head">こだわりの空間</h3>
         <p class="IconPanel__body">
           ランチからディナーまでいつまでもリラックスして使えるくつろぎ空間。椅子や壁、細部にまでこだわっています。
         </p>
       </a>
       <a class="IconPanel l-quaterColumn">
-        <%= fa_icon 'coffee' %>
+        <%= fa_icon 'coffee', class:'IconPanel__icon' %>
         <h3 class="IconPanel__head">豆へのこだわり</h3>
         <p class="IconPanel__body">
           原産地、豆の種類、焙煎方法のこだわりを紹介する
         </p>
       </a>
       <a class="IconPanel l-quaterColumn">
-        <%= fa_icon 'pencil' %>
+        <%= fa_icon 'pencil', class:'IconPanel__icon' %>
         <h3 class="IconPanel__head">コーヒースクール</h3>
         <p class="IconPanel__body">
           コーヒー豆の基礎知識から、美味しいコーヒーを淹れるコツをお教えします。
         </p>
       </a>
       <a class="IconPanel l-quaterColumn">
-        <%= fa_icon 'laptop' %>
+        <%= fa_icon 'laptop', class:'IconPanel__icon' %>
         <h3 class="IconPanel__head">BLOG</h3>
         <p class="IconPanel__body">
           お店の最新情報を、いち早くお届け。
