--- a/app/assets/stylesheets/components/_imageSlide.scss
+++ b/app/assets/stylesheets/components/_imageSlide.scss
@@ -3,6 +3,7 @@
   position: relative;
   display: flex;
   flex-direction: column;
+  overflow: hidden;
   //画像のラッパー
   &__main {
     display: flex;
@@ -22,6 +23,9 @@
     top: -40px;
     display: flex;
     justify-content: center;
+    @include mq-sp {
+      top: -20px;
+    }
   }
   &__dot {
     display: block;
@@ -39,6 +43,11 @@
     }
     &.isActive {
       background: $color-black;
+    }
+    @include mq-sp {
+      width: 10px;
+      height: 10px;
+      margin-right: 10px;
     }
   }
 }
