--- a/app/assets/stylesheets/components/_newsList.scss
+++ b/app/assets/stylesheets/components/_newsList.scss
@@ -1,6 +1,10 @@
 .NewsList {
   display: table;
   border-spacing: 0px $space-unit/2;
+  border-collapse: separate;
+  @include mq-sp {
+    font-size: 12px;
+  }
   &__item {
     display: table-row;
   }
