--- a/app/assets/stylesheets/components/common/_header.scss
+++ b/app/assets/stylesheets/components/common/_header.scss
@@ -10,4 +10,15 @@
   &__body {
     flex: 3 1 auto
   }
+  //スマートフォン用ハンバーガーボタン
+  &__button {
+    @include mq-pc {
+      display: none;
+    }
+    @include mq-sp {
+      display: block;
+      color: $color-main-text;
+      font-size: 22px;
+    }
+  }
 }
