3つのコンテンツが並んでいるコンポーネントの制作

--- a/app/views/staff/campaign/index.html.erb
+++ b/app/views/staff/campaign/index.html.erb
@@ -22,3 +22,76 @@
     <span class="ImageSlide__dot js-slide-point">image3</span>
   </div>
 </div>
+
+<section class="Section l-column">
+  <div class="Section__head">
+    <h2 class="sectionLabel">CAMPAIGN</h2>
+  </div>
+  <div class="l-row">
+    <section class="EntryPanel EntryPanel--vertical l-tripartitionColumn">
+      <div class="EntryPanel__sub">
+        <%= image_tag('campaign/cp_entry1.jpg',class:'EntryPanel__thumb',alt:'フルーツとグラノーラ') %>
+      </div>
+      <div class="EntryPanel__main">
+        <h3 class="EntryPanel__head">1日のはじまりに</h3>
+        <div class="EntryPanel__body">
+          大切なあの方にありがとうを届けたい。<br>心も体も温まる素敵なギフト。<br>プレゼントキャンペーン実施中
+        </div>
+        <div class="EntryPanel__foot"><a href="#" class="button">READ MORE</a></div>
+      </div>
+    </section>
+
+    <section class="EntryPanel EntryPanel--vertical l-tripartitionColumn">
+      <div class="EntryPanel__sub">
+        <%= image_tag('campaign/cp_entry2.jpg',class:'EntryPanel__thumb',alt:'自家製グラノーラとカフェオレ') %>
+      </div>
+      <div class="EntryPanel__main">
+        <h3 class="EntryPanel__head">自家製グラノーラ</h3>
+        <div class="EntryPanel__body">
+          大切なあの方にありがとうを届けたい。<br>心も体も温まる素敵なギフト。<br>プレゼントキャンペーン実施中
+        </div>
+        <div class="EntryPanel__foot"><a href="#" class="button">READ MORE</a></div>
+      </div>
+    </section>
+
+    <section class="EntryPanel EntryPanel--vertical l-tripartitionColumn">
+      <div class="EntryPanel__sub">
+        <%= image_tag('campaign/cp_entry3.jpg',class:'EntryPanel__thumb',alt:'自家製レモネード') %>
+      </div>
+      <div class="EntryPanel__main">
+        <h3 class="EntryPanel__head">フルーツの恵であたたまる</h3>
+        <div class="EntryPanel__body">
+          大切なあの方にありがとうを届けたい。<br>心も体も温まる素敵なギフト。<br>プレゼントキャンペーン実施中
+        </div>
+        <div class="EntryPanel__foot"><a href="#" class="button">READ MORE</a></div>
+      </div>
+    </section>
+  </div>
+
+  <div class="Section__item l-column l-row">
+    <div class="l-row">
+      <a class="IconPanel l-tripartitionColumn">
+        <%= fa_icon 'heart', class:'IconPanel__icon' %>
+        <h3 class="IconPanel__head">魔法のくちどけ</h3>
+        <p class="IconPanel__body">
+          SPECIAL NUTS CHOCOLATEは最上級のカカオ豆を使用して作っております。<br>製法にあった配合で作り出すSWEETSはまさに絶品。魔法の口溶けをご体験してみてください。
+        </p>
+      </a>
+      <a class="IconPanel l-tripartitionColumn">
+        <%= fa_icon 'leaf', class:'IconPanel__icon' %>
+        <h3 class="IconPanel__head">選び抜かれた素材</h3>
+        <p class="IconPanel__body">
+          素材は世界各地から選びぬかれた素材のみを使用しています。じっくり味わって、素材の違いを感じてください。
+        </p>
+      </a>
+      <a class="IconPanel l-tripartitionColumn">
+        <%= fa_icon 'smile-o', class:'IconPanel__icon' %>
+        <h3 class="IconPanel__head">プレゼントにも</h3>
+        <p class="IconPanel__body">
+          SPECIAL SWEETSはテイクアウトも可能です。<br>
+          お家でのティータイムや、友達へのプレゼントにもぴったりです。オリジナルマグカップとコーヒー、SPECIAL SWEETSのセットもあります。
+        </p>
+      </a>
+    </div>
+  </div>
+</section>
