--- a/app/assets/stylesheets/components/parts/_layouts.scss
+++ b/app/assets/stylesheets/components/parts/_layouts.scss
@@ -54,3 +54,18 @@
   max-width: 100%;
   max-height: 100%;
 }
+.l-tripartitionColumn {
+  flex: 1
+  0 0px;
+  max-width: ($base-content-width - $column-space*(2/3))/3;
+  margin-right: $column-space*2/3;
+  width: ($base-content-width - $column-space*6)/3;
+  @include mq-sp {
+    flex: 1 1 100%;
+    max-width: none;
+    margin: 0;
+  }
+  &:last-child {
+    margin-right: 0;
+  }
+}
