横幅いっぱいの画像のコンポーネントと「アイコン+テキストコンポーネント」

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -66,6 +66,8 @@
 // ===========================
 @import "./pages/index";
 
+@import "./pages/campaign";
+
 // ===========================
 // Utils
 // ===========================
