--- a/app/views/staff/campaign/index.html.erb
+++ b/app/views/staff/campaign/index.html.erb
@@ -23,6 +23,7 @@
   </div>
 </div>
 
+
 <section class="Section l-column">
   <div class="Section__head">
     <h2 class="sectionLabel">CAMPAIGN</h2>
@@ -92,6 +93,23 @@
           お家でのティータイムや、友達へのプレゼントにもぴったりです。オリジナルマグカップとコーヒー、SPECIAL SWEETSのセットもあります。
         </p>
       </a>
+    </div>
+  </div>
+</section>
+
+<section class="Section">
+  <div class="Section__item Campaign__sweets">
+    <div class="Campaign__sweets__main">
+      <div class="Campaign__sweets__main">
+        <h2 class="Campaign__sweets__head">Special Sweets</h2>
+        <div class="Campaign__sweets__body">
+          <p>毎日日替わりでコーヒーに合うスィーツをご用意しています。</p>
+          <p>オープン以来人気No.1のスィーツメニューSPECIAL NUTS CHOCOLATEは<br>パリの老舗で修行を積んだチョコラティエが提案するとっておきチョコレート。</p>
+          <p>香ばしいヘーゼルナッツのかおりに甘酸っぱいクランベリーがコーヒーとベストマッチ！</p>
+          <p>他では味わえない魔法のくちどけをぜひ、おためしください。</p>
+        </div>
+        <a href="#" class="Campaign__sweets__button">OUR SWEETS</a>
+      </div>
     </div>
   </div>
 </section>
