フォームを作成する

--- a/app/views/staff/campaign/index.html.erb
+++ b/app/views/staff/campaign/index.html.erb
@@ -113,3 +113,15 @@
     </div>
   </div>
 </section>
+
+<section class="Section l-column">
+  <div class="Section__head">
+    <h2 class="sectionLabel">More Info</h2>
+  </div>
+  <%= form_tag(staff_campaign_submit_path, :method => :get, class:'Form') do %>
+      <%= text_field :campaign, :name, placeholder:'NAME',size:40,class: 'Form__input' %>
+      <%= text_field :campaign, :mail, placeholder:'MAIL',size:40,class: 'Form__input' %>
+      <%= button_tag('SUBSCRIBE',class:'button Form__button') %>
+  <% end %>
+
+</section>
