Flexを活用してサイドバーのあるレイアウトを作る

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -71,6 +71,8 @@
 
 @import "./pages/campaign";
 
+@import "./pages/article";
+
 // ===========================
 // Utils
 // ===========================
