--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -3,14 +3,14 @@
     <%= fa_icon 'bars' %>
   </div>
   <div class="Header__head">
-    <h1 class="logo">BAUKIS KAI</h1>
+    <h1 class="logo"><%= link_to('BAUKIS KAI', staff_root_url, class:'logo') %></h1>
   </div>
   <nav class="Header__body SpMenu">
     <ul class="Menu">
       <li class="Menu__item"><a href="#">Services</a></li>
       <li class="Menu__item"><a href="#">Work</a></li>
       <li class="Menu__item"><a href="#">About</a></li>
-      <li class="Menu__item"><a href="#">Blog</a></li>
+      <li class="Menu__item"><%= link_to('Blog', staff_article_index_url) %></li>
       <li class="Menu__item"><a href="#">Contact</a></li>
     </ul>
   </nav>
