--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -63,7 +63,9 @@
 
 //font-awesome
 @import "font-awesome";
-
+//BootStrap
+@import "bootstrap-sprockets";
+@import "components/bootstrap-custom";
 // ===========================
 // Pages
 // ===========================
