職員・管理者・顧客ページ分割 #1

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -69,11 +69,11 @@
 // ===========================
 // Pages
 // ===========================
-@import "./pages/index";
+@import "pages/customer/index";
 
-@import "./pages/campaign";
+@import "pages/customer/campaign";
 
-@import "./pages/article";
+@import "pages/customer/article";
 
 // ===========================
 // Utils
