--- a/app/views/shared/admin/_header.html.erb
+++ b/app/views/shared/admin/_header.html.erb
@@ -7,11 +7,7 @@
   </div>
   <nav class="Header__body SpMenu">
     <ul class="Menu">
-      <li class="Menu__item"><a href="#">Services</a></li>
-      <li class="Menu__item"><a href="#">Work</a></li>
-      <li class="Menu__item"><a href="#">About</a></li>
-      <li class="Menu__item"><%= link_to('Blog', staff_article_index_url) %></li>
-      <li class="Menu__item"><a href="#">Contact</a></li>
+      <li class="Menu__item"><a href="#"></a></li>
     </ul>
   </nav>
 </header>
