--- a/app/views/shared/customer/_footer.html.erb
+++ b/app/views/shared/customer/_footer.html.erb
@@ -6,7 +6,7 @@
         <li><a href="#" class="Menu__item">Services</a></li>
         <li><a href="#" class="Menu__item">Work</a></li>
         <li><a href="#" class="Menu__item">About us</a></li>
-        <li><%= link_to('Blog', staff_article_index_url,class:"Menu__item") %></li>
+        <li><%= link_to('Blog', customer_article_index_url,class:"Menu__item") %></li>
         <li><a href="#" class="Menu__item">Contact</a></li>
       </ul>
     </div>
